--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-13.48MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20003, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.62MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-730.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-358.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.66MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-703.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-233.0KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.29MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.87MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-175.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-161.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
