--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-703.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-233.0KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.29MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.87MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-175.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-161.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 198.57.27.225, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 198.57.27.225, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 5.188.0.226, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 5.188.0.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-703.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
