--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 198.57.27.225, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 198.57.27.225, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 阿联酋-1.37MB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-175.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-440.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 5.188.0.226, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 阿联酋-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
